// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<ul
  class="DropdownList"
  data-test-id="cf-ui-dropdown-list"
  role="menu"
  style="max-height: auto; overflow-y: visible;"
>
  <li
    class="DropdownListItem"
    data-test-id="cf-ui-dropdown-list-item"
    role="menuitem"
  >
    <span>
      List Item
    </span>
  </li>
</ul>
`;

exports[`renders the component with a border attribute 1`] = `
<ul
  class="DropdownList DropdownList--border-top"
  data-test-id="cf-ui-dropdown-list"
  role="menu"
  style="max-height: auto; overflow-y: visible;"
>
  <li
    class="DropdownListItem"
    data-test-id="cf-ui-dropdown-list-item"
    role="menuitem"
  >
    <span>
      List Item
    </span>
  </li>
</ul>
`;

exports[`renders the component with an additional class name 1`] = `
<ul
  class="DropdownList my-extra-class"
  data-test-id="cf-ui-dropdown-list"
  role="menu"
  style="max-height: auto; overflow-y: visible;"
>
  <li
    class="DropdownListItem"
    data-test-id="cf-ui-dropdown-list-item"
    role="menuitem"
  >
    <span>
      List Item
    </span>
  </li>
</ul>
`;
